--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ spongegradle = "2.2.0"
 adventure-api = { module = "net.kyori:adventure-api", version.ref = "adventure" }
 adventure-gson = { module = "net.kyori:adventure-text-serializer-gson", version.ref = "adventure" }
 adventure-ansi = { module = "net.kyori:adventure-text-serializer-ansi", version.ref = "adventure" }
+adventure-legacy = { module = "net.kyori:adventure-text-serializer-legacy", version.ref = "adventure" }
 aircompressor = { module = "io.airlift:aircompressor", version = "0.27" }
 bluecommands-core = { module = "de.bluecolored:bluecommands-core", version.ref = "bluecommands" }
 bluecommands-brigadier = { module = "de.bluecolored:bluecommands-brigadier", version.ref = "bluecommands" }
