feat(LevelDB): 添加对LevelDB世界存储格式的支持，更新配置以启用此功能

--- a/common/src/main/resources/de/bluecolored/bluemap/config/core.conf
+++ b/common/src/main/resources/de/bluecolored/bluemap/config/core.conf
@@ -11,6 +11,13 @@
 # ${timestamp}
 accept-download: false
 
+# Controls whether BlueMap should use LevelDB format for world data storage.
+# When enabled, BlueMap will use LevelDB (used by Bedrock Edition) to store and access world data.
+# This is typically used for Bedrock Edition worlds or when you want to use LevelDB as the storage backend.
+# Set to false to use the default Anvil format (used by Java Edition).
+# Default is false
+leveldb-world: false
+
 # The folder where bluemap saves data-files it needs during runtime or to save e.g. the render-progress to resume it later.
 # Default is "bluemap"
 data: "${data}"
